--- a/app/index.html
+++ b/app/index.html
@@ -195,8 +195,8 @@
 		<div class="inner">
 			<div class="all-title">
 				<div class="red-line"></div>
-				<h2>Последние подобранные<br>
-					автомобили</h2>
+				<h2>Останні зроблені<br>
+					автомобілі</h2>
 			</div>
 			<div class="container-fluid">
 				<div class="row">
@@ -363,9 +363,6 @@
 												<h3>Виктор</h3>
 											</div>
 										</div>
-										<div class="col-xs-12 col-md-2">
-
-										</div>
 									</div>
 								</li>
                             </ul>
@@ -391,12 +388,12 @@
 				<p>Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet.</p>
 				<p>Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
 				<div class="name-d">
-					<h3>Дмитрий Гуляев</h3>
+					<h3>Аграмаков Сергій Валерійович</h3>
 					<p>директор</p>
 				</div>
 			</div>
 			<div class="right-foto-dima">
-				<img src="img/dima.png" alt="">
+				<img src="img/Agramakov.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -404,18 +401,17 @@
 		<div class="inner">
 			<form class="clearfix">
 				<div class="left-img">
-					<img src="" alt="">
+					<img src="img/book1.png" alt="">
 				</div>
 				<div class="right-form">
-					<h2>Хочешь самостоятельно подобрать<br>
-						автомобиль, но не хватает опыта?</h2>
-					<p>Получи <span>бесплатное руководство</span> по самостоятельному <br>подбору подержанного автомобиля</p>
+					<h2>Хочешь відремонтувати авто,<br>но нема опита?</h2>
+					<p>Вставай в чергу <span>та не переймайся</p>
 					<input type="hidden" name="project_name" value="Diagnost">
 					<input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
 					<input type="hidden" name="form_subject" value="Регистрация">
-					<input type="text" placeholder="Как Вас зовут?" required>
+					<input type="text" placeholder="Як вас звати?" required>
 					<input type="text" placeholder="Ваш Email" required>
-					<button type="submit" name="send">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+					<button type="submit" name="send">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</button>
 				</div>
 			</form>
 		</div>
