--- a/app/index.html
+++ b/app/index.html
@@ -404,7 +404,7 @@
 					<img src="img/book1.png" alt="">
 				</div>
 				<div class="right-form">
-					<h2>Хочешь відремонтувати авто,<br>но нема опита?</h2>
+					<h2>Хочешь відремонтувати авто,<br>но нема часу робити це власноруч?</h2>
 					<p>Вставай в чергу <span>та не переймайся</p>
 					<input type="hidden" name="project_name" value="Diagnost">
 					<input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
@@ -472,16 +472,16 @@
 			<h2>Заявка на звонок</h2>
 		</div>
 		<div class="all-form-popup">
-			<h2>Заполните форму и мы<br>
-				перезвоним Вам в течение15 минут.</h2>
+			<h2>Заповніть форму і ми<br>
+				передзвонимо Вам протягом 15 хвилин.</h2>
 			<form>
-				<input type="hidden" name="project_name" value="Diagnost">
-				<input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
-				<input type="hidden" name="form_subject" value="Регистрация">
-				<input type="text" placeholder="Ваш имя" required>
+				<input type="hidden" name="project_name" value="Assoservice">
+				<input type="hidden" name="admin_email" value="ElectroDeggi33759pro@gmail.com">
+				<input type="hidden" name="form_subject" value="Регістрація">
+				<input type="text" placeholder="Ваш Ім'я" required>
 				<input type="text" placeholder="Ваш номер телефона" required>
 				<div class="time-to-call">
-					<h3>Когда Вам перезвонить?</h3>
+					<h3>Коли Вам передзвонити?</h3>
 						<div class="time-p">
 							18
 							<div class="inp ">
@@ -504,7 +504,7 @@
 								</div>
 							</div>
 						</div>
-						<p>по МСК</p>
+						<p>по КИЕВУ</p>
 				</div>
 				<button type="submit" name="send">ОТПРАВИТЬ</button>
 			</form>
@@ -517,13 +517,13 @@
 			<h2>Заявка на консультацию</h2>
 		</div>
 		<div class="all-form-popup">
-			<h2>Заполните форму и мы<br>
-				перезвоним Вам в течение15 минут.</h2>
+			<h2>Заповніть форму і ми<br>
+				передзвонимо Вам протягом 15 хвилин.</h2>
 			<form>
-				<input type="hidden" name="project_name" value="Diagnost">
-				<input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
-				<input type="hidden" name="form_subject" value="Регистрация">
-				<input type="text" placeholder="Ваш имя" required>
+				<input type="hidden" name="project_name" value="Assoservice">
+				<input type="hidden" name="admin_email" value="ElectroDeggi33759pro@gmail.com">
+				<input type="hidden" name="form_subject" value="Регістрація">
+				<input type="text" placeholder="Ваш Ім'я" required>
 				<input type="text" placeholder="Ваш номер телефона" required>
 				<button type="submit" name="send">ОТПРАВИТЬ</button>
 			</form>
@@ -533,19 +533,19 @@
 
 	<div id="popup-form" class="callback-popup all-form-popup-b mfp-hide">
 		<div class="all-popup-title">
-			<h2>Получи брошюру</h2>
+			<h2>Отримай документ</h2>
 		</div>
 		<div class="all-form-popup clearfix">
-			<h2>Получи <span>бесплатное руководство</span> <br>по самостоятельному подбору подержанного автомобиля</h2>
+			<h2>Отримай безкоштовну консультацію</h2>
 			<div class="left-all-img">
 				<img src="img/book2.png" alt="">
 			</div>
 			<div class="right-all-text">
 				<form>
-					<input type="hidden" name="project_name" value="Diagnost">
-					<input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
-					<input type="hidden" name="form_subject" value="Регистрация">
-					<input type="text" placeholder="Ваш имя" required>
+					<input type="hidden" name="project_name" value="Assoservice">
+					<input type="hidden" name="admin_email" value="ElectroDeggi33759pro@gmail.com">
+					<input type="hidden" name="form_subject" value="Регістрація">
+					<input type="text" placeholder="Ваш Ім'я" required>
 					<input type="text" placeholder="Ваш email" required>
 					<input type="text" placeholder="Ваш номер телефона" required>
 					<button type="submit" name="send">ОТПРАВИТЬ</button>
@@ -556,56 +556,16 @@
 
 	<div id="popup-true" class="callback-popup callback-popup-true mfp-hide">
 		<div class="all-popup-title">
-			<h2>Проверка перед покупкой</h2>
+			<h2>Перевірка та дефектовка</h2>
 		</div>
 		<div class="all-form-popup">
-			<h2>Техническая проверка подойдет Вам, если:</h2>
-			<ul>
-				<li>
-					<span>•</span>
-					<p>Вы уже нашли потенциально хороший автомобиль</p>
-				</li>
-				<li>
-					<span>•</span>
-					<p>Он Вас устраивает, но нет возможности убедиться в его<br>состоянии</p>
-				</li>
-				<li>
-					<span>•</span>
-					<p>Вас настораживает какой-то нюанс в автомобиле или <br>его владельце</p>
-				</li>
-				<li>
-					<span>•</span>
-					<p>Друг или товарищ, разбирающийся в автомобилях <br>    не может приехать</p>
-				</li>
-				<li>
-					<span>•</span>
-					<p>У Вас (Вашего знакомого) уже есть опыт покупки <br>неудачного автомобиля</p>
-				</li>
-				<li>
-					<span>•</span>
-					<p>Вы не можете приехать и посмотреть автомобиль  <br>по нескольким причинам:</p>
-					<ul class="second-tru clearfix">
-						<li>
-							<span>·</span>
-							<p>Не отпускает работа/учеба/бизнес</p>
-						</li>
-						<li>
-							<span>·</span>
-							<p>Вы находитесь далеко от Москвы</p>
-						</li>
-						<li>
-							<span>·</span>
-							<p>Просто не хотите терять время</p>
-						</li>
-					</ul>
-				</li>
-			</ul>
+			<h2>Техніческая проверка подойдет Вам, если:</h2>
 			<form>
-				<h3>Заполните форму и мы вам перезвоним</h3>
-				<input type="hidden" name="project_name" value="Diagnost">
-				<input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
-				<input type="hidden" name="form_subject" value="Регистрация">
-				<input type="text" placeholder="Ваш имя" required>
+				<h3>Заповніть форму і ми вам передзвонимо</h3>
+				<input type="hidden" name="project_name" value="Assoservice">
+				<input type="hidden" name="admin_email" value="ElectroDeggi33759pro@gmail.com">
+				<input type="hidden" name="form_subject" value="Регістрація">
+				<input type="text" placeholder="Ваш Ім'я" required>
 				<input type="text" placeholder="Ваш номер телефона" required>
 				<button type="submit" name="send">ОТПРАВИТЬ</button>
 			</form>
