--- a/app/price.html
+++ b/app/price.html
@@ -55,62 +55,58 @@
 
 <body>
 
-<header class="clearfix in-b">
-    <div class="inner">
-        <div class="top-head clearfix">
-            <div class="logo">
-                <a href="#">
-                    <img src="img/logo.png" alt="">
-                </a>
-                <p>Проверка автомобилей перед покупкой<br>в Самаре и Тольятти</p>
-            </div>
-            <div class="social">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                </ul>
-            </div>
-            <div class="right-head">
-                <div class="city">
-                    <h3><b>Самара</b>  8 (846) 231-28-91</h3>
-                    <h3><b>Тольятти</b>  8 (8482) 61-84-24</h3>
-                </div>
-                <button class="hamburger hamburger--spin hidden-md visible-xs visible-sm" type="button">
+    <header class="clearfix">
+		<div class="inner">
+			<div class="top-head clearfix">
+				<div class="logo">
+					<a href="#">
+						<img src="img/logo.png" alt="">
+					</a>
+					<p>Ремонт та Діагностика Авто в Кременчуці</p>
+				</div>
+				<div class="social">
+					<ul>
+						<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+				<div class="right-head">
+					<div class="city">
+						<h3><b>Кременчук</b>  +38(068) 769-92-00</h3>
+					</div>
+					<button class="hamburger hamburger--spin hidden-md visible-xs visible-sm" type="button">
 						  <span class="hamburger-box">
 							<span class="hamburger-inner"></span>
 						  </span>
-                </button>
-                <div class="popup-but">
-                    <a href="#">ЗАКАЗАТЬ ЗВОНОК</a>
-                </div>
-            </div>
-        </div>
-        <div class="head-menu clearfix">
-            <ul>
-                <li><a href="#">О компании </a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Цены</a></li>
-                <li><a href="#">Статьи</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-            <div class="social">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
+					</button>
+					<div class="popup-but">
+						<a href="#test-popup" class="open-popup-link">ЗАМОВИТИ ДЗВІНОК</a>
+					</div>
+				</div>
+			</div>
+			<div class="head-menu clearfix">
+				<ul>
+					<li><a href="#">Про компанію </a></li>
+					<li><a href="#">Послуги</a></li>
+					<li><a href="#">Ціни</a></li>
+					<li><a href="#">Контакти</a></li>
+				</ul>
+				<div class="social">
+					<ul>
+						<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
 <div class="breadcrumbs">
     <div class="inner">
         <ul class="clearfix">
             <li><a href="#" >Главная</a></li>
-            <li><a href="#" class="active">Контакты</a></li>
+            <li><a href="#" class="active">Ціна</a></li>
         </ul>
     </div>
 </div>
@@ -118,7 +114,7 @@
     <div class="inner">
         <div class="all-title">
             <div class="red-line"></div>
-            <h2>Citroen C4 2012</h2>
+            <h2>Прайс</h2>
         </div>
         <div class="price-in">
             <ul>
@@ -127,12 +123,12 @@
                         <img src="img/p-img1.jpg" alt="">
                     </div>
                     <div class="text-price">
-                        <h2>Комплексная техническая<br>проверка автомобиля</h2>
-                        <p>Проверка кузова прибором и визуальный осмотр сварных соединений, компьютерная диагностика двигателя, коробки передач, подушек безопасности, оценка реальности пробега, проверка электроники, осмотр двигателя и навесного оборудования для выявления подтеков и шумов, осмотр крупных узлов ходовой части, тест-драйв для проверки автомобиля под нагрузкой.
+                        <h2>Комплексна технічна<br>перевірка автомобіля</h2>
+                        <p>Перевірка кузова приладом та візуальний огляд зварних з'єднань, комп'ютерна діагностика двигуна, коробки передач, подушок безпеки, оцінка реальності пробігу, перевірка електроніки, огляд двигуна та навісного обладнання для виявлення патьоків та шумів, огляд великих вузлів ходової частини, тест-драйв для перевірки автомобіля під навантаженням.
                         </p>
                         <div class="price-coast">
-                            <p ><span>2500</span> руб.</p>
-                            <a href="#" class="pull-right">заказать</a>
+                            <p ><span>300</span> грн.</p>
+                            <a href="#" class="pull-right">замовити</a>
                         </div>
                     </div>
                 </li>
@@ -141,12 +137,12 @@
                         <img src="img/p-img2.jpg" alt="">
                     </div>
                     <div class="text-price">
-                        <h2>Подбор автомобиля</h2>
-                        <p>Поиск требуемого автомобиля, проведение осмотра, комплексной технической, криминалистической<br>и юридической проверки подходящих вариантов.
+                        <h2>Заміна запчастин</h2>
+                        <p>Заміна будь яких запчастин згідно с тех-документаціею та інш.
                         </p>
                         <div class="price-coast">
-                            <p ><span>2500</span> руб.</p>
-                            <a href="#" class="pull-right">заказать</a>
+                            <p ><span>300\год</span> грн.</p>
+                            <a href="#" class="pull-right">замовити</a>
                         </div>
                     </div>
                 </li>
@@ -155,12 +151,12 @@
                         <img src="img/p-img3.jpg" alt="">
                     </div>
                     <div class="text-price">
-                        <h2>Криминалистическая<br>проверка автомобиля</h2>
-                        <p>Проверка паспорта транспортного средства на подлинность, оценка состояния идентификационной маркировки, выявление следов перебивки и переварки VIN номера, проверка маркировки производителя в блоках управления, выявление скрытой и служебной маркировки, проверка автомобиля и собственника по базам данных.
+                        <h2>Компьютерна діагностика</h2>
+                        <p>Перевірка паспорта транспортного засобу на справжність, оцінка стану ідентифікаційного маркування, виявлення слідів перебивки та перетравлення VIN номера, перевірка маркування виробника в блоках керування, виявлення прихованого та службового маркування, перевірка автомобіля та власника за базами даних.
                         </p>
                         <div class="price-coast">
-                            <p ><span>2500</span> руб.</p>
-                            <a href="#" class="pull-right">заказать</a>
+                            <p ><span>350</span> грн.</p>
+                            <a href="#" class="pull-right">замовити</a>
                         </div>
                     </div>
                 </li>
@@ -169,12 +165,12 @@
                         <img src="img/p-img4.jpg" alt="">
                     </div>
                     <div class="text-price">
-                        <h2>Регионам</h2>
+                        <h2>Інші послуги</h2>
                         <p>Согласование проверки без вашего участия, проведение комплексной технической диагностики, подготовка отчетаи фотографий.
                         </p>
                         <div class="price-coast">
-                            <p ><span>2500</span> руб.</p>
-                            <a href="#" class="pull-right">заказать</a>
+                            <p ><span>300\год</span> грн.</p>
+                            <a href="#" class="pull-right">замовити</a>
                         </div>
                     </div>
                 </li>
