--- a/app/contacts.html
+++ b/app/contacts.html
@@ -55,57 +55,53 @@
 
 <body>
 
-<header class="clearfix in-b">
-    <div class="inner">
-        <div class="top-head clearfix">
-            <div class="logo">
-                <a href="#">
-                    <img src="img/logo.png" alt="">
-                </a>
-                <p>Проверка автомобилей перед покупкой<br>в Самаре и Тольятти</p>
-            </div>
-            <div class="social">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                </ul>
-            </div>
-            <div class="right-head">
-                <div class="city">
-                    <h3><b>Самара</b>  8 (846) 231-28-91</h3>
-                    <h3><b>Тольятти</b>  8 (8482) 61-84-24</h3>
-                </div>
-                <button class="hamburger hamburger--spin hidden-md visible-xs visible-sm" type="button">
+    <header class="clearfix">
+		<div class="inner">
+			<div class="top-head clearfix">
+				<div class="logo">
+					<a href="#">
+						<img src="img/logo.png" alt="">
+					</a>
+					<p>Ремонт та Діагностика Авто в Кременчуці</p>
+				</div>
+				<div class="social">
+					<ul>
+						<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+				<div class="right-head">
+					<div class="city">
+						<h3><b>Кременчук</b>  +38(068) 769-92-00</h3>
+					</div>
+					<button class="hamburger hamburger--spin hidden-md visible-xs visible-sm" type="button">
 						  <span class="hamburger-box">
 							<span class="hamburger-inner"></span>
 						  </span>
-                </button>
-                <div class="popup-but">
-                    <a href="#">ЗАКАЗАТЬ ЗВОНОК</a>
-                </div>
-            </div>
-        </div>
-        <div class="head-menu clearfix">
-            <ul>
-                <li><a href="#">О компании </a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Цены</a></li>
-                <li><a href="#">Статьи</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-            <div class="social">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
+					</button>
+					<div class="popup-but">
+						<a href="#test-popup" class="open-popup-link">ЗАМОВИТИ ДЗВІНОК</a>
+					</div>
+				</div>
+			</div>
+			<div class="head-menu clearfix">
+				<ul>
+					<li><a href="#">Про компанію </a></li>
+					<li><a href="#">Послуги</a></li>
+					<li><a href="#">Ціни</a></li>
+					<li><a href="#">Контакти</a></li>
+				</ul>
+				<div class="social">
+					<ul>
+						<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
 <div class="breadcrumbs">
     <div class="inner">
         <ul class="clearfix">
@@ -127,23 +123,19 @@
                         <div class="cont-phones">
                             <ul>
                                 <li>
-                                    <h3>Телефон в Тольятти: </h3>
-                                    <p>+7 (8482) 61-84-24</p>
-                                </li>
-                                <li>
-                                    <h3>Телефон в Самаре: </h3>
-                                    <p>+7 (846) 231-28-91</p>
+                                    <h3>Телефон в Кремечуці: </h3>
+                                    <p>+38(068) 769-92-00</p>
                                 </li>
                                 <li>
                                     <div class="work-time">
                                         <h3>Режим работы: </h3>
-                                        <p>ежедневно<br class="br-phone"> (без выходных)<br>с 9:00 до 20:00</p>
+                                        <p>С пн-пт<br class="br-phone"> <br>с 9:00 до 18:00</p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="email-cont">
                                         <h3>Электронная<br class="br-phone"> почта:</h3>
-                                        <a>diagnostmaster@mail.ru</a>
+                                        <a>electrodeggi33759pro@gmail.com</a>
                                     </div>
                                 </li>
                                 <li>
@@ -152,9 +144,7 @@
                                         <div class="social-cont">
                                             <ul class="clearfix">
                                                 <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</a></li>
-                                                <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i>ВКонтакте</a></li>
                                                 <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i>Youtube</a></li>
-                                                <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i>Одноклассники</a></li>
                                                 <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
                                             </ul>
                                         </div>
@@ -181,8 +171,8 @@
                 </div>
                 <div class="cont-icons">
                     <ul>
-                        <li><a href="#"><img src="img/icon1.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="img/icon2.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="img/" alt=""></a></li>
+                        <li><a href="#"><img src="img/" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -195,36 +185,32 @@
             <a href="#">
                 <img src="img/logo1.png" alt="">
             </a>
-            <p>© 2010 – 2017.</p>
-            <tt>Создание и продвижение сайта <span>Marketing Plus.</span></tt>
+            <p>© 2000 – 2023.</p>
+            <tt>Создание и продвижение сайта <span>AgramakovFamily</span></tt>
         </div>
         <div class="footer-menu clearfix">
             <ul class="clearfix">
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Услуги </a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Цены</a></li>
-                <li><a href="#">Статьи</a></li>
+                <li><a href="#">О компанії</a></li>
+                <li><a href="#">Послуги</a></li>
+                <li><a href="#">Контакти</a></li>
+                <li><a href="#">Ціни</a></li>
             </ul>
         </div>
         <div class="social clearfix">
-            <ul>
-                <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-            </ul>
-        </div>
+                <ul>
+                    <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
         <div class="right-head">
-            <div class="city">
-                <h3><b>Самара</b>  8 (846) 231-28-91</h3>
-                <h3><b>Тольятти</b>  8 (8482) 61-84-24</h3>
+                <div class="city">
+                    <h3><b>Кременчук</b>  +38(068) 769-92-00</h3>
+                </div>
+                <div class="popup-but">
+                    <a href="#popup-true" class="open-popup-link">ЗАКАЗАТЬ ЗВОНОК</a>
+                </div>
             </div>
-            <div class="popup-but">
-                <a href="#">ЗАКАЗАТЬ ЗВОНОК</a>
-            </div>
-        </div>
     </div>
 </footer>
 
